Version 0.4.0

* Evan Sampson added Holdridge life zones model

Version 0.4.1

* Generation of grayscale heightmap

Version 0.4.2

* Generation of rivers map
* Stefan Feltmann ported Lands to Pillow (removing PIL)

Version 0.4.3

* Adopting plate-tectonics (my fork of platec) which permits rectangular plate calculations

Version 0.5.0

* Supporting python 3
* Initial GUI (only plates simulation)

Version 0.5.1

* Packaging lands as a script
* Supporting protocol buffer serialization
* QT based Gui

Version 0.5.2

* Basic GUI implemented, supporting all views and simulations

Version 0.5.3

* Saving generation parameters in world file (Russell Brinkmann)
* Revising command line options (Russell Brinkmann)
* Adding tracing statements about performance (Russell Brinkmann)

Version 0.5.4

* Fix bug in sea representation for elevation map
* [Technical] Increase test coverage